@@ -1,0 +1,8 @@
+package ch.ehi.sqlgen.repository;
+import ch.ehi.sqlgen.repository.DbColumn;
+
+public class DbColJson extends DbColumn
+{
+
+}
+
