@@ -1,6 +1,7 @@
 LATEST SNAPSHOT
 ---------------
 - allow schema generation without open connection
+- added DbColJson
 
 ehisqlgen 1.13.6 (2018-09-05)
 ---------------------------
